--- a/public/styles.css
+++ b/public/styles.css
@@ -15,6 +15,13 @@ body {
     transition: background-color 0.3s, color 0.3s;
 }
 
+.currency-icon {
+    width: 23px;
+    height: 25px;
+    vertical-align: middle;
+    margin-left: 5px;
+}
+
 [data-theme="dark"] body {
     background-color: #121212;
     color: #ffffff;
@@ -106,6 +113,68 @@ table {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s, color 0.3s;
 }
+
+
+
+.modern-table {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+}
+
+.modern-table-row {
+    display: flex;
+    gap: 5px;
+    max-width: 195px;
+    font-size: 12px;
+}
+
+.modern-table-cell {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    background-color: var(--card-bg, #f5f5f5);
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    color: var(--text-color, #000);
+    max-width: 200;
+}
+
+.modern-table-icon {
+    width: 24px;
+    height: 24px;
+    margin-left: 10px;
+}
+
+.modern-table-cell span {
+    margin-left: 10px;
+}
+
+/* Mobile Responsiveness */
+@media (max-width: 768px) {
+    .modern-table-row {
+        flex-direction: row; /* Keep items in a row */
+        justify-content: space-between; /* Space them evenly */
+    }
+
+    .modern-table-cell {
+        flex: 1; /* Allow cells to grow equally */
+        min-width: 48%; /* Ensure they don't get too small */
+        margin-bottom: 10px; /* Add spacing between rows */
+    }
+}
+
+/* Dark Theme Styles */
+[data-theme="dark"] .modern-table-cell {
+    background-color: var(--card-bg-dark, #2c2c2c);
+    color: var(--text-color-dark, #fff);
+}
+
 
 [data-theme="dark"] table {
     background-color: #1e1e1e;
@@ -351,4 +420,5 @@ input:checked + .slider:before {
     [data-theme="dark"] .coming-soon-card p {
         color: #ccc;
     }
+   
 }
